# DeepLearning_BookRecommender

./: .gitignore  Example Code - Project.ipynb  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb
src/: app.py  model2.ipynb  recommender.py  top10.py  utils.py
src/ml/: __init__.py  config.py  inference.py  logging_utils.py  model.py  preprocessing.py
